--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "electron_tornado",
+  "name": "electron-tornado",
   "version": "1.0.0",
   "description": "Electron and tornado server app",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "setup": "pip3 install pyinstaller && pip3 install tornado",
-    "package-win": "npm run setup && pyinstaller server.py --distpath pydist && rd /s /q __pycache__ && rd /s /q build && del /q server.spec && electron-packager . electron-tornado --overwrite  --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron + Tornado App\"",
-    "package-linux": "npm run setup && pyinstaller server.py --distpath pydist && rm -rf build && rm server.spec && electron-packager . electron-tornado --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
+    "setup": "pip3 install pyinstaller && pip3 install tornado && npm i",
+    "package-win": "npm run setup && pyinstaller server.py --distpath pydist && rd /s /q __pycache__ && rd /s /q build && del /q server.spec && electron-packager . electron-tornado --overwrite  --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron + Tornado App\" npm run start",
+    "package-linux": "npm run setup && pyinstaller server.py --distpath pydist && rm -rf build && rm server.spec && electron-packager . electron-tornado --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds npm run start"
   },
   "author": "Krupkin Viktor <kruvv@mail.ru>",
   "license": "ISC",
